REGRESSION (r98852): apple.com navigation bar is broken under full-page zoom https://bugs.webkit.org/show_bug.cgi?id=76249

Reviewed by Andreas Kling.

Source/WebCore:

Fix regression with full-page zoom & border-image. paintNinePieceImage() expects local, unzoomed coordinates.
Restore the behaviour as it was before r98852, fixing the regression.

Test: fast/borders/scaled-border-image.html

* rendering/RenderBoxModelObject.cpp:
(WebCore::RenderBoxModelObject::paintNinePieceImage):

LayoutTests:

Add new test covering zooming + border-image, which regressed.

* fast/borders/scaled-border-image.html: Added.
* platform/mac/fast/borders/scaled-border-image-expected.png: Added.
* platform/mac/fast/borders/scaled-border-image-expected.txt: Added.

Canonical link: https://commits.webkit.org/93553@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105515 268f45cc-cd09-0410-ab3c-d52691b4dbfc